# ai-event-research-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_project.sh
.github/workflows/: python-app.yml
app/: main.py
app/agents/: __init__.py  firecrawl.py  research_agent.py
app/cli/: __init__.py  usage.py  validators.py
app/config/: __init__.py  agent_config.py  logging_config.py
app/constants/: keys.py
app/helpers/: __init__.py  prompt.py
app/models/: __init__.py  event_model.py  firecrawl_model.py
app/tests/: test_firecrawl_key.py
app/utilities/: __init__.py  convert_flat_data_to_json.py  key_storage.py  load_api_key.py  load_google_api_key.py  output.py  output_excel.py  valid_firecrawl_key_format.py  valid_google_key_format.py
