[project]
name = "ai-event-research-cli"
version = "1.0.0"
description = "This CLI tool uses a local LLM model with LangGraph, LangChain, and Firecrawl to search, analyze, and extract structured information about upcoming events based on location and topic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain_core>=2.1.5",
    "langchain-ollama>=0.1.0",
    "firecrawl>=2.1.5",
    "langgraph>=0.5.0",
    "docopt>=0.6.2",
    "python-dotenv>=1.1.1",
    "pandas[excel]>=2.3.0",
    "pytest>=8.4.1",
]
