[project]
name = "ai-event-research-cli"
version = "0.1.0"
description = "This CLI tool uses a local LLM model with LangGraph, LangChain, and Firecrawl to search, analyze, and extract structured information about upcoming events based on location and topic."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.4",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "et-xmlfile==2.0.0",
    "firecrawl==2.12.0",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==1.2.28",
    "langchain-ollama==1.0.1",
    "langgraph==1.0.10",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.8",
    "langsmith==0.7.31",
    "multidict==6.6.3",
    "nest-asyncio==1.6.0",
    "numpy==2.4.0",
    "odfpy==1.4.1",
    "ollama==0.6.1",
    "openpyxl==3.1.5",
    "orjson==3.11.6",
    "ormsgpack==1.12.1",
    "packaging==24.2",
    "pandas==2.3.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "python-calamine==0.6.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2025.2",
    "pyxlsb==1.0.10",
    "pyyaml==6.0.2",
    "requests==2.33.0",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.6.3",
    "websockets==15.0.1",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.5",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]

[tool.uv]
dev-dependencies = [
  "flake8",
  "pytest"
]

[tool.flake8]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist"
]
